bk_ida/gccida/c3/bitmap_element_zerop
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/bitmap_element_zerop/src/bitmap.c:621:19: error: expected expression
return *( _OWORD *)element->bits == 0LL; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/bitmap_element_zerop/src/bitmap.c:621:11: error: use of undeclared identifier '_OWORD'
return *( _OWORD *)element->bits == 0LL; 
          ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/bitmap_element_zerop/src/obj/bitmap.o] Error 1
